Align docs and Redis config support

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ VPS_DATABASE_INSTANCE=db-server.example.com:9100
 
 # Redis connection
 # Used for: BullMQ queue monitoring, AutoHEAL configuration storage
+# REDIS_URL=redis://user:password@redis.example.com:6379
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
@@ -58,14 +59,6 @@ REDIS_PASSWORD=
 # If empty: dashboard is publicly accessible (not recommended for production)
 # Sessions are stored as httpOnly cookies, valid for 7 days
 DASHBOARD_PASSWORD=
-
-# -----------------------------------------------------------------------------
-# APPLICATION
-# -----------------------------------------------------------------------------
-
-# Public URL of the dashboard (optional)
-# Used for: SSE connection URL in client-side code
-NEXT_PUBLIC_APP_URL=https://dashboard.example.com
 
 # -----------------------------------------------------------------------------
 # UPTIME KUMA (optional)
